--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,8 +15,8 @@ const currentYear = new Date().getFullYear();
 		<meta charset="UTF-8" />
 		<meta name="description" content="Tablón de Anuncios de la Sociedad de Festejos de San Roque en Arobes, Parres. Consulta el programa y las últimas noticias de la fiesta." />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href="/favicon.ico" sizes="any" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href={`${import.meta.env.BASE_URL}favicon.ico`} sizes="any" />
+        <link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 
